# waspy

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  clippy.toml  justfile  rustfmt.toml
.github/workflows/: ci.yml  docs.yml  test.yml
docs/: changelog.html  index.html  main.js  modules-style.css  modules.html  style.css
docs/changelog/: index.html
docs/modules/: index.html
docs/paper/: index.html  waspy.html
examples/: advanced_compiler.rs  algorithms.py  basic_operations.py  builtins.py  bytes_example.py  calculator.py  closures.py  compile_module_level.rs  compile_project.rs  compiler.rs  comprehensions.py  control_flow.py  entry_point_demo.rs  exceptions.py  extended_unpacking.py  extract_functions.rs  file_io.py  flexible_compiler.rs  generators.py  html_test.rs  list_float.py  loop_control.py  loop_unpacking.py  module_level_demo.py  multi_file_compiler.rs  nested_collections.py  oop_abc.py  oop_dataclasses.py  oop_inheritance.py  oop_method_kinds.py  oop_objects.py  plugin_test.rs  project_compiler.rs  project_metadata.rs  range_example.py  set_example.py  simple_compiler.rs  stdlib_all_modules.py  stdlib_test.py  test_all_stdlib_imports.py  (+16 more)
examples/calculator_project/: calculator.py  operations.py  setup.py
examples/user_modules_app/: main.py  mathlib.py  shapes.py
src/: compiler.rs  config.rs  errors.rs  ir.rs  lib.rs  optimizer.rs  parser.rs  project.rs  wasmrun.rs
src/analysis/: imports.rs  metadata.rs  mod.rs  project.rs
src/compiler/: context.rs  expression.rs  function.rs  mod.rs  module.rs
src/core/: comments.rs  config.rs  errors.rs  mod.rs  options.rs  parser.rs
src/ir/: converter.rs  decorators.rs  entry_points.rs  finalize.rs  generators.rs  mod.rs  types.rs
src/optimize/: mod.rs  wasm.rs
src/stdlib/: collections.rs  datetime.rs  functools.rs  itertools.rs  json.rs  logging.rs  math.rs  mod.rs  os.rs  random.rs  re.rs  sys.rs
src/utils/: fs.rs  logging.rs  mod.rs
tests/integration/: coverage.rs  examples.rs
tests/unit/: basics.rs  errors.rs
tests/utils/: harness.rs
