[package]
name = "waspy"
version = "0.5.1"
edition = "2021"
description = "A Python interpreter written in Rust, designed for WebAssembly."
license = "MIT OR Apache-2.0"
repository = "https://github.com/anistark/waspy"
keywords = ["python", "interpreter", "webassembly"]
categories = ["compilers", "wasm", "web-programming"]
readme = "README.md"
authors = ["Kumar Anirudha <hi@anirudha.dev>"]

[dependencies]
rustpython-parser = "0.4.0"
wasm-encoder = "0.229.0"
anyhow = "1.0"
binaryen = "0.12.0"
thiserror = "1.0"
log = "0.4"

[lib]
name = "waspy"
path = "src/lib.rs"

# Examples
[[example]]
name = "simple_compiler"
path = "examples/simple_compiler.rs"

[[example]]
name = "advanced_compiler"
path = "examples/advanced_compiler.rs"

[[example]]
name = "multi_file_compiler"
path = "examples/multi_file_compiler.rs"

[[example]]
name = "project_compiler"
path = "examples/project_compiler.rs"

[[example]]
name = "typed_demo"
path = "examples/typed_demo.rs"
