[package]
name = "waspy"
version = "0.8.0"
edition = "2021"
rust-version = "1.70.0"
description = "A Python interpreter written in Rust, designed for WebAssembly."
license = "MIT"
repository = "https://github.com/anistark/waspy"
keywords = ["python", "interpreter", "webassembly", "wasm", "compiler"]
categories = ["compilers", "wasm", "web-programming", "development-tools"]
readme = "README.md"
documentation = "https://docs.rs/wasmrun"
authors = ["Kumar Anirudha <hi@anirudha.dev>"]
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "CONTRIBUTING.md",
]

[features]
default = []
wasm-plugin = ["serde"]

[dependencies]
rustpython-parser = "0.4.0"
wasm-encoder = "0.243.0"
anyhow = "1.0.100"
binaryen = "0.13.0"
thiserror = "1.0"
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde_json = "1.0"
chrono = "0.4"
regex = "1.11"

[lib]
name = "waspy"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

# Examples
[[example]]
name = "simple_compiler"
path = "examples/simple_compiler.rs"

[[example]]
name = "advanced_compiler"
path = "examples/advanced_compiler.rs"

[[example]]
name = "multi_file_compiler"
path = "examples/multi_file_compiler.rs"

[[example]]
name = "project_compiler"
path = "examples/project_compiler.rs"

[[example]]
name = "typed_demo"
path = "examples/typed_demo.rs"

[[example]]
name = "plugin_test"
path = "examples/plugin_test.rs"
required-features = ["wasm-plugin"]

[[example]]
name = "html_test"
path = "examples/html_test.rs"
required-features = ["wasm-plugin"]

[[example]]
name = "verbose_debug_demo"
path = "examples/verbose_debug_demo.rs"

# Plugin metadata following wasmrust pattern
[package.metadata.wasm_plugin]
name = "python"
extensions = ["py"]
entry_files = ["main.py", "__main__.py", "app.py", "src/main.py"]

[package.metadata.wasm_plugin.capabilities]
supported_languages = ["python"]
compile_wasm = true
compile_webapp = false
live_reload = false
optimization = true
custom_targets = ["wasm"]
html_generation = true

[package.metadata.wasm_plugin.dependencies]
tools = []
optional_tools = []

[package.metadata.wasm_plugin.exports]
plugin_create = "wasmrun_plugin_create"
